--- a/Wildfire/Views/MapView.xaml
+++ b/Wildfire/Views/MapView.xaml
@@ -2,13 +2,48 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Wildfire.Views.MapView"
-             Title="View Map">
-    <ContentPage.Content>
-        <StackLayout BackgroundColor="White">
-            <Label Text="Welcome to Xamarin.Forms!"
-                   TextColor="Black"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+             xmlns:maps="clr-namespace:Xamarin.Forms.GoogleMaps;assembly=Xamarin.Forms.GoogleMaps"
+             Title="Map"
+             >
+
+
+    <AbsoluteLayout>
+        <maps:Map x:Name="map" 
+                  AbsoluteLayout.LayoutBounds="0,0,1,1"
+               AbsoluteLayout.LayoutFlags="All" 
+               HorizontalOptions="FillAndExpand"
+               VerticalOptions="FillAndExpand"
+               ></maps:Map>
+        
+        <Button AbsoluteLayout.LayoutBounds="0.98,0.73,AutoSize,AutoSize"
+                AbsoluteLayout.LayoutFlags="PositionProportional"
+                HeightRequest="52"
+                WidthRequest="52"
+                CornerRadius="25"
+                BackgroundColor="LightGray"
+                BorderColor="Black"
+                BorderWidth="3"
+                ImageSource="pin.png"/>
+        <Button AbsoluteLayout.LayoutBounds="0.98, 0.84, AutoSize, AutoSize"
+                AbsoluteLayout.LayoutFlags="PositionProportional"
+                HeightRequest="52"
+                WidthRequest="52"
+                CornerRadius="25"
+                BackgroundColor="LightGray"
+                BorderColor="Black"
+                BorderWidth="3"
+                ImageSource="search.png"
+                Clicked="Button_Clicked"/>
+        <Button AbsoluteLayout.LayoutBounds="0.98,0.95,AutoSize,AutoSize"
+                AbsoluteLayout.LayoutFlags="PositionProportional"
+                HeightRequest="52"
+                WidthRequest="52"
+                CornerRadius="25"
+                BackgroundColor="LightGray"
+                BorderColor="Black"
+                BorderWidth="3"
+                ImageSource="crosshair"
+                
+               />
+    </AbsoluteLayout>
 </ContentPage>
