--- a/Wildfire/Views/SettingsView.xaml
+++ b/Wildfire/Views/SettingsView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Wildfire.Views.SettingsView"
-             Title="Settings View">
+             Title="Settings">
 
     <ContentPage.Content>
         <StackLayout BackgroundColor="White">
@@ -11,5 +11,6 @@
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
+     
     </ContentPage.Content>
 </ContentPage>
