--- a/Wildfire/Views/MapView.xaml
+++ b/Wildfire/Views/MapView.xaml
@@ -7,7 +7,7 @@
              >
 
 
-    <AbsoluteLayout>
+    <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
         <maps:Map x:Name="map" 
                   AbsoluteLayout.LayoutBounds="0,0,1,1"
                AbsoluteLayout.LayoutFlags="All" 
@@ -33,7 +33,56 @@
                 BorderColor="Black"
                 BorderWidth="3"
                 ImageSource="search.png"
-                Clicked="Button_Clicked"/>
+                Clicked="Search_Clicked"/>
+
+        <!-- Pop Up Modal -->
+
+        <Frame
+            x:Name="popupSearch"
+            BackgroundColor="Transparent"
+            Padding="10, 10"
+            IsVisible="false"
+            AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
+            AbsoluteLayout.LayoutFlags="All"
+            BorderColor="Black"
+            HasShadow="True">
+            <Frame
+                VerticalOptions="Center"
+                HorizontalOptions="Center"
+                BorderColor="Black"
+                HasShadow="true">
+                <StackLayout
+                    Orientation="Vertical"
+                    HeightRequest="470"
+                    WidthRequest="300"
+                    BackgroundColor="White"
+                    
+                    >
+                    <Image
+                        HorizontalOptions="End"
+                        Source="cancel.png"
+                        HeightRequest="24"
+                        WidthRequest="24">
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer
+                                Tapped="RemovePopupTapped"
+                                NumberOfTapsRequired="1">
+                                
+                            </TapGestureRecognizer>
+                        </Image.GestureRecognizers>
+                        
+                    </Image>
+                    <Entry
+                        Placeholder="Enter Location"
+                        PlaceholderColor="LightGray"
+                        TextColor="Black"
+                        FontSize="20">
+
+                    </Entry>
+                </StackLayout>
+            </Frame>
+        </Frame>
+
         <Button AbsoluteLayout.LayoutBounds="0.98,0.95,AutoSize,AutoSize"
                 AbsoluteLayout.LayoutFlags="PositionProportional"
                 HeightRequest="52"
