Report fire basic functionality complete, working on displaying the information on map

--- a/Wildfire/Views/MapView.xaml
+++ b/Wildfire/Views/MapView.xaml
@@ -173,5 +173,13 @@
                 ImageSource="crosshair"
                 
                />
+
+        <ListView x:Name="lstPersons">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding FireID}"></TextCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </AbsoluteLayout>
 </ContentPage>
