--- a/Wildfire/Views/ReportFireInfoView.xaml
+++ b/Wildfire/Views/ReportFireInfoView.xaml
@@ -5,7 +5,7 @@
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="0"/>
                 <RowDefinition Height="70"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="25"/>
@@ -48,8 +48,8 @@
                 Grid.Column="1">
                 
             </TimePicker>
-            <Label Grid.Row="5" Grid.Column="1" BindingContext="Label"></Label>
-            <Label Text="enter fire name" Grid.Row="6" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
+            <Label x:Name="myLat" Grid.Row="0" Grid.Column="0" TextColor="Black" FontSize="2"></Label>
+            <Label x:Name="myLong" Grid.Row="0" Grid.Column="0" TextColor="Black" FontSize="2"></Label>
             <Entry x:Name="fireID" Placeholder="fireID" Grid.Row="8" Grid.Column="1" FontSize="Medium">
 
             </Entry>
