Report Fire and Current Location functional

--- a/Wildfire/Views/MapView.xaml
+++ b/Wildfire/Views/MapView.xaml
@@ -172,7 +172,7 @@
                 BorderColor="Black"
                 BorderWidth="3"
                 ImageSource="crosshair"
-                
+                Clicked="Location_Button_Clicked"
                />
     </AbsoluteLayout>
 </ContentPage>
