--- a/Wildfire/Views/ReportFireInfoView.xaml
+++ b/Wildfire/Views/ReportFireInfoView.xaml
@@ -9,10 +9,10 @@
                 <RowDefinition Height="70"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="25"/>
-                <RowDefinition Height="55"/>
+                <RowDefinition Height="45" />
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
+                <RowDefinition Height="45"/>
                 <RowDefinition Height="55"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="70"/>
@@ -41,37 +41,32 @@
                 <Label Text="Report Fire" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
             </Frame>
             
+            <!--Time Found // Start-->
             <Label Text="Time Found @" Grid.Row="3" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
-            
-            <TimePicker
-                Grid.Row="4"
-                Grid.Column="1">
-                
-            </TimePicker>
+            <Label x:Name="timeFound" Grid.Row="4" Grid.Column="1" TextColor="Black" FontSize="16" BackgroundColor="LightGray"></Label>
+            <!--Time Found // End-->
+
+            <!--Wind Direction // Start-->
+            <Label Text="Wind Direction" Grid.Row="6" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
+            <Entry x:Name="directionEntry" Grid.Row="7" Grid.Column="1" TextColor="Black" FontSize="16" BackgroundColor="LightGray"></Entry>
+            <!--Wind Direction // End-->
+
+            <!-- Latitude & Longitude // Start-->
             <Label x:Name="myLat" Grid.Row="0" Grid.Column="0" TextColor="Black" FontSize="2"></Label>
             <Label x:Name="myLong" Grid.Row="0" Grid.Column="0" TextColor="Black" FontSize="2"></Label>
+            <!-- Latitude & Longitude // End-->
+            
+            <!-- Place Name // Start-->
+            <Label x:Name="placeName" Grid.Row="0" Grid.Column="0" TextColor="Black" FontSize="18"></Label>
+            <!-- PLace Name // End-->
             <Entry x:Name="fireID" Placeholder="fireID" Grid.Row="8" Grid.Column="1" FontSize="Medium" Keyboard="Numeric"></Entry>
             <Button  Text="add" x:Name="btn_Add" WidthRequest="100" HeightRequest=" 50" Grid.Row="10" Grid.Column="1" Clicked="btn_Add_Clicked"></Button>
    
 
                
-            <!--<Label Text="Wind Direction(if known)?" Grid.Row="10" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
-            <Picker Grid.Row="12" Grid.Column="1" Title="Select" TitleColor="Black">
-                <Picker.ItemsSource>
-                    <x:Array Type="{x:Type x:String}">
-                        <x:String>North</x:String>
-                        <x:String>North-East</x:String>
-                        <x:String>North-West</x:String>
-                        <x:String>East</x:String>
-                        <x:String>West</x:String>
-                        <x:String>South-West</x:String>
-                        <x:String>South-East</x:String>
-                        <x:String>South</x:String>
-                    </x:Array>
+            
+           
 
-                </Picker.ItemsSource>
-
-            </Picker>-->
             <Label Text="Photos" Grid.Row="14" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
             <Button Grid.Row="16" Grid.Column="1">
                 
