--- a/Wildfire/Views/ResolveFireInfoView.xaml
+++ b/Wildfire/Views/ResolveFireInfoView.xaml
@@ -29,9 +29,10 @@
             </Frame>
             
             <Label x:Name="fireID" Grid.Row="2" Grid.Column="1" FontSize="Medium"></Label>
-            <Button  Text="resolve" x:Name="btn_Res" WidthRequest="100" HeightRequest=" 50" Grid.Row="3" Grid.Column="1" Clicked="btn_Res_Clicked"></Button>
+            <Button  Text="resolve" x:Name="btn_Res" WidthRequest="100" HeightRequest=" 50" Grid.Row="3" Grid.Column="1" Clicked="btn_Res_Clicked" BackgroundColor="#ff8c19"></Button>
 
 
+            
         </Grid>
     </ContentPage.Content>
 </ContentPage>
