Major changes to Application, Create Account and Login Features implemented and Working, UI needs to be majorly worked on.

--- a/Wildfire/MainTabPage.xaml
+++ b/Wildfire/MainTabPage.xaml
@@ -20,7 +20,14 @@
         </Views:InfoView>
         
         <Views:MapView IconImageSource="location.png">
-            
+            <StackLayout>
+                <Button
+                    Clicked="SignOut_Clicked"
+                    HorizontalOptions="Start"
+                    VerticalOptions="Center">
+                    
+                </Button>
+            </StackLayout>
         </Views:MapView>
 
         <Views:SettingsView IconImageSource="settings.png">
