--- a/Wildfire/Views/FirstPageView.xaml
+++ b/Wildfire/Views/FirstPageView.xaml
@@ -1,31 +1,70 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Wildfire.Views.FirstPageView">
+             x:Class="Wildfire.Views.FirstPageView"
+             BackgroundImageSource="b_g.png">
     <ContentPage.Content>
 
-        <StackLayout>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"></RowDefinition>
+                <RowDefinition Height="120"></RowDefinition>
+                <RowDefinition Height="250"></RowDefinition>
+                <RowDefinition Height="55"></RowDefinition>
+                <RowDefinition Height="55"></RowDefinition>
+                <RowDefinition Height="55"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Label Text="Wildfire"
+                   Grid.Row="1"
+                   FontSize="50"
+                   HorizontalOptions="Center"
+                   TextColor="Black"
+                   Margin="0,30"
+                   FontAttributes="Bold"></Label>
             <Button 
+                Grid.Row="5"
                 Text="Create Account"
-                TextColor="#4682B4"
+                TextColor="Black"
                 HorizontalOptions="Center"
-                BackgroundColor="Transparent"
+                BackgroundColor="#ff8c19"
+                CornerRadius="10"
+                BorderWidth="3"
+                FontSize="16"
+                FontAttributes="Bold"
+                
+                BorderColor="Black"
                 Clicked="CreateAcc_Clicked"/>
 
             <Button 
+                Grid.Row="4"
                 Text="Login"
-                TextColor="#4682B4"
+                TextColor="Black"
                 HorizontalOptions="Center"
-                BackgroundColor="Transparent"
-                Clicked="LoginIn_Clicked"/>
+                VerticalOptions="EndAndExpand"
+                BorderWidth="3"
+                BorderColor="Black"
+                CornerRadius="10"
+                FontSize="16"
+                FontAttributes="Bold"
+                BackgroundColor="#ff8c19"
+                Clicked="LoginIn_Clicked"
+                />
 
             <Button 
+                Grid.Row="6"
                 Text="Continue without Account"
-                TextColor="#4682B4"
+                TextColor="Black"
                 HorizontalOptions="Center"
-                BackgroundColor="Transparent"
+                VerticalOptions="EndAndExpand"
+                Margin="0,20"
+                CornerRadius="10"
+                BorderWidth="3"
+                BorderColor="Black"
+                FontAttributes="Bold"
+                BackgroundColor="LightGray"
+                
                 Clicked="Continue_Clicked"/>
             
-        </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
