Notifications + Resolve Fire Features functioning. More clean up work needs to be done.

--- a/Wildfire/Views/MapView.xaml
+++ b/Wildfire/Views/MapView.xaml
@@ -18,7 +18,7 @@
                HorizontalOptions="FillAndExpand"
                VerticalOptions="FillAndExpand"
                maps:MapLongClicked="map_MapClicked"
-               
+               PinClicked="map_PinClicked"
                ></maps:Map>
 
         <Button AbsoluteLayout.LayoutBounds="0.98,0.73,AutoSize,AutoSize"
